<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/star"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/reg_info_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#39f"
        android:text="@string/reg_info"
        android:textSize="30dp" />
    <LinearLayout
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
		android:gravity="center_horizontal"
    	android:layout_marginTop="30dp"
    	android:orientation="horizontal" >
    	<TextView
        android:id="@+id/tno_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#39f"
        android:text="@string/tno"
        android:textSize="23dp"
        />
    	<EditText
    	    android:id="@+id/edit_tno_r"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:ems="10"
    	    android:numeric="integer"
    	    android:maxLength="10"
    	    android:textColor="#fff"
    	    android:textSize="23dp" >
    	    <requestFocus />
    	</EditText>
    </LinearLayout>
    <LinearLayout
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
		android:gravity="center_horizontal"
    	android:layout_marginTop="20dp"
    	android:orientation="horizontal" >
    	<TextView
        android:id="@+id/pwd_r_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#39f"
        android:text="@string/password"
        android:textSize="23dp"
        />
    	<EditText
    	    android:id="@+id/edit_pwd_r_teacher"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:ems="10"
    	    android:maxLength="10"
    	    android:textColor="#fff"
    	    android:inputType="textPassword"
    	    android:textSize="23dp" >
    	</EditText>
    </LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="20dp"
    	android:gravity="center_horizontal"
    	android:orientation="horizontal" >
    	<TextView
        android:id="@+id/tname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#39f"
        android:text="@string/sname"
        android:textSize="23dp"
        />

    	<EditText
    	    android:id="@+id/edit_tname"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:ems="10"
    	    android:maxLength="10"
    	    android:textColor="#fff"
    	    android:textSize="23dp" >
    	</EditText>

    </LinearLayout>
    <LinearLayout
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="20dp"
    	android:gravity="center_horizontal"
    	android:orientation="horizontal" >
    	<TextView
        android:id="@+id/tel_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#39f"
        android:text="@string/tel"
        android:textSize="23dp"
        />

    	<EditText
    	    android:id="@+id/edit_tel_teacher"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:ems="10"
    	    android:maxLength="10"
    	    android:textColor="#fff"
    	    android:textSize="23dp" >
    	</EditText>

    </LinearLayout>
    
    <LinearLayout
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
		android:gravity="center_horizontal"
    	android:layout_marginTop="20dp"
    	android:orientation="horizontal" >
    	<RadioGroup
	        android:id="@+id/gender_teacher"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
			<RadioButton
	            android:id="@+id/gender_male"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="60dp"
	            android:textSize="23dp"
	            android:textColor="#ff0"
	            android:checked="true"
	            android:text="@string/radio_boy"
	             />
	
			<RadioButton
			    android:id="@+id/gender_female"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/radio_girl"
			    android:textColor="#ff0"
			    android:textSize="23dp" />

    </RadioGroup>
    </LinearLayout>
    <Button 
        android:id="@+id/btn_reg_r_teacher"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="23dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_register"
        android:background="@drawable/yellow_selector"
        />
	    
</LinearLayout>
